# TrilhaDadosJR-JUN15

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/gold/: tratados_dados_vendas_cursos_online.csv
notebook/: analise_de_dados_vendas_cursos_online.ipynb
src/: processamento_database.py
