[tool.poetry]
name = "trilhadadosjr-jun15"
version = "0.1.0"
description = ""
authors = ["oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.2.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
numpy = "^2.0.1"
statistics = "^1.0.3.5"
statsmodels = "^0.14.2"
pingouin = "^0.5.4"
scipy = "^1.14.0"
plotly = "^5.22.0"
streamlit-navigation-bar = "^3.3.0"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
